@@ -15,6 +15,7 @@ Version 1.6.9.2
 - Replace PROTO_MANET by PROTO_FNAC
 - Replace PROTO_QUICKTIME by PROTO_FORBES
 - Replace PROTO_HTTP_CONNECT by PROTO_FOXNEWS
+- Replace PROTO_FOXNEWS by PROTO_REUTERS
 
 Version 1.6.9.1
 - Update PROTO_GTP: classify_next, extract GTP header information such as: version, proto_type,...
